--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,19 +5,17 @@
           <span class="title">Image Gallery</span>
         </a>
     </div>
-    <div class="header-nav">
-        <a routerLink="" class="nav-link nav-icon">
-            <clr-icon shape="cloud"></clr-icon>
-        </a>
+    <form class="search">
+        <label for="search_input">
+            <input id="search_input" type="text" placeholder="Search images ..."
+            (keyup)="search($event.target.value)">
+        </label>
+    </form>
+    <div class="header-actions">
         <a routerLink="albums" class="nav-link nav-icon">
             <clr-icon shape="folder"></clr-icon>
         </a>
-        <form class="search">
-            <label for="search_input">
-                <input id="search_input" type="text" placeholder="Search images ..."
-                (keyup)="search($event.target.value)">
-            </label>
-        </form>
     </div>
+
 
 </clr-header>
